--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.23.0",
+    "css-loader": "^6.7.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
+    "postcss-preset-env": "^7.7.1",
+    "style-loader": "^3.3.1",
     "webpack-dev-server": "^4.9.2"
   },
   "scripts": {
